feat: Implemented UI for quick book in BookingPage
- Added inverse converter for visibility
- Added toggle switch to change visible UI elements

--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -277,6 +277,7 @@
     <PackageReference Include="LiveCharts.WinForms" Version="0.9.7.1" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="Syncfusion.SfInput.WPF" Version="25.2.3" />
+    <PackageReference Include="ToggleSwitch" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
