--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -137,6 +137,7 @@
     <None Remove="Resources\Images\Tours\Vienna6.jpg" />
     <None Remove="Resources\Images\tour_request_icon.png" />
     <None Remove="Resources\Images\trash.png" />
+    <None Remove="Resources\Images\user-icon.png" />
     <None Remove="Resources\Images\view.png" />
   </ItemGroup>
 
@@ -277,6 +278,7 @@
     <Resource Include="Resources\Images\Tours\Vienna6.jpg" />
     <Resource Include="Resources\Images\tour_request_icon.png" />
     <Resource Include="Resources\Images\trash.png" />
+    <Resource Include="Resources\Images\user-icon.png" />
   </ItemGroup>
 
   <ItemGroup>
