feat: Gui changes
-Changed colors of SideMenuPage
-Chagned titles
-Added alignments in combobox

--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -76,11 +76,13 @@
     <None Remove="Resources\Images\Icons\logout-white-icon.png" />
     <None Remove="Resources\Images\Icons\normal-owner-icon.png" />
     <None Remove="Resources\Images\Icons\not-super-icon.png" />
+    <None Remove="Resources\Images\Icons\owner-icon.png" />
     <None Remove="Resources\Images\Icons\people-icon.png" />
     <None Remove="Resources\Images\Icons\pointing-arrow-icon.png" />
     <None Remove="Resources\Images\Icons\red-circle-icon.png" />
     <None Remove="Resources\Images\Icons\renovation-icon-beige.png" />
     <None Remove="Resources\Images\Icons\reschedule-icon.png" />
+    <None Remove="Resources\Images\Icons\reservations-beige-icon.png" />
     <None Remove="Resources\Images\Icons\right-arrow-icon.png" />
     <None Remove="Resources\Images\Icons\scheduled-icon.png" />
     <None Remove="Resources\Images\Icons\search-white-icon.png" />
@@ -235,12 +237,14 @@
     <Resource Include="Resources\Images\Icons\locked-building-icon.png" />
     <Resource Include="Resources\Images\Icons\logout-white-icon.png" />
     <Resource Include="Resources\Images\Icons\normal-owner-icon.png" />
+    <Resource Include="Resources\Images\Icons\owner-icon.png" />
     <Resource Include="Resources\Images\Icons\people-icon.png" />
     <Resource Include="Resources\Images\Icons\location-icon.png" />
     <Resource Include="Resources\Images\Icons\pointing-arrow-icon.png" />
     <Resource Include="Resources\Images\Icons\red-circle-icon.png" />
     <Resource Include="Resources\Images\Icons\renovation-icon-beige.png" />
     <Resource Include="Resources\Images\Icons\reschedule-icon.png" />
+    <Resource Include="Resources\Images\Icons\reservations-beige-icon.png" />
     <Resource Include="Resources\Images\Icons\right-arrow-icon.png" />
     <Resource Include="Resources\Images\Icons\scheduled-icon.png" />
     <Resource Include="Resources\Images\Icons\search-white-icon.png" />
