feat: Custom font and gui overhaul

--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -52,6 +52,7 @@
     <None Remove="Resources\Images\Icons\cancel-event-icon.png" />
     <None Remove="Resources\Images\Icons\cancel-icon-beige.png" />
     <None Remove="Resources\Images\Icons\cancel-icon.png" />
+    <None Remove="Resources\Images\Icons\category-icon.png" />
     <None Remove="Resources\Images\Icons\chat-white-icon.png" />
     <None Remove="Resources\Images\Icons\clear-icon-beige.png" />
     <None Remove="Resources\Images\Icons\confirm-icon-beige.png" />
@@ -146,6 +147,18 @@
     <None Remove="Resources\Images\trash.png" />
     <None Remove="Resources\Images\user-icon.png" />
     <None Remove="Resources\Images\view.png" />
+    <None Remove="WPF\Utils\Fonts\Roboto-Black.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-BlackItalic.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-Bold.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-BoldItalic.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-Italic.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-Light.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-LightItalic.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-Medium.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-MediumItalic.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-Regular.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-Thin.ttf" />
+    <None Remove="WPF\Utils\Fonts\Roboto-ThinItalic.ttf" />
   </ItemGroup>
 
   <ItemGroup>
@@ -213,6 +226,7 @@
     <Resource Include="Resources\Images\default-coupon.png" />
     <Resource Include="Resources\Images\Icons\cancel-icon-beige.png" />
     <Resource Include="Resources\Images\Icons\cancel-icon.png" />
+    <Resource Include="Resources\Images\Icons\category-icon.png" />
     <Resource Include="Resources\Images\Icons\chat-white-icon.png" />
     <Resource Include="Resources\Images\Icons\clear-icon-beige.png" />
     <Resource Include="Resources\Images\Icons\confirm-icon-beige.png" />
@@ -301,6 +315,18 @@
     <Resource Include="Resources\Images\tour_request_icon.png" />
     <Resource Include="Resources\Images\trash.png" />
     <Resource Include="Resources\Images\user-icon.png" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-Black.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-BlackItalic.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-Bold.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-BoldItalic.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-Italic.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-Light.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-LightItalic.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-Medium.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-MediumItalic.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-Regular.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-Thin.ttf" />
+    <Resource Include="WPF\Utils\Fonts\Roboto-ThinItalic.ttf" />
   </ItemGroup>
 
   <ItemGroup>
