--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -109,6 +109,7 @@
     <None Remove="Resources\Images\Icons\super-icon.png" />
     <None Remove="Resources\Images\Icons\time-icon.png" />
     <None Remove="Resources\Images\Icons\user-icon.png" />
+    <None Remove="Resources\Images\Icons\verified-icon.png" />
     <None Remove="Resources\Images\live.png" />
     <None Remove="Resources\Images\normal-home-icon.png" />
     <None Remove="Resources\Images\notification-request-icon.png" />
@@ -272,6 +273,7 @@
     <Resource Include="Resources\Images\Icons\stopwatch.png" />
     <Resource Include="Resources\Images\Icons\time-icon.png" />
     <Resource Include="Resources\Images\Icons\user-icon.png" />
+    <Resource Include="Resources\Images\Icons\verified-icon.png" />
     <Resource Include="Resources\Images\live.png" />
     <Resource Include="Resources\Images\normal-home-icon.png" />
     <Resource Include="Resources\Images\notification-request-icon.png" />
