--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -363,6 +363,9 @@
     <PackageReference Include="LiveCharts.WinForms" Version="0.9.7.1" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
+    <PackageReference Include="PdfiumViewer" Version="2.13.0" />
+    <PackageReference Include="PdfiumViewer.Native.x86.v8-xfa" Version="2018.4.8.256" />
+    <PackageReference Include="PdfiumViewer.Native.x86_64.v8-xfa" Version="2018.4.8.256" />
     <PackageReference Include="QuestPDF" Version="2024.3.7" />
     <PackageReference Include="Syncfusion.SfInput.WPF" Version="25.2.3" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
